src/github.com/ebay/beam/query/parser/testdata/legacy/errors/5_terms.res
Query:
?id ?s rdfs:label ?l ?unknown

Parsed:
Error: unable to parse query: line 1 column 30: expected to find 3 or 4 terms in a query line, you have 5
